refactor: rename id selectors to class selectors

--- a/box-model/index.css
+++ b/box-model/index.css
@@ -1,41 +1,41 @@
-#card {
-    width: 210px;
-    border: 1px solid grey;
-    text-align: center;
-    margin:10px 0
+.card {
+  width: 210px;
+  border: 1px solid grey;
+  text-align: center;
+  margin: 10px 0;
 }
 
-#card img {
-    width: 200px;
-    border: 5px solid rgb(236, 183, 191);
-    border-radius: 50%;
+.card img {
+  width: 200px;
+  border: 5px solid rgb(236, 183, 191);
+  border-radius: 50%;
 }
 
-#one {
-    width:200px;
-    border-width: 5px;
-    border-color: black;
-    border-style: solid;
-    background-color: #e5989b;
-    display: inline-block;
+.one {
+  width: 200px;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  background-color: .e5989b;
+  display: inline-block;
 }
 
-#two {
-    width: 200px;
-    border-width: 3px;
-    border-color: #ffcdb2;
-    border-style: dashed;
-    background-color: #b5838d;
-    display: inline-block;
-    margin-left: 10px
+.two {
+  width: 200px;
+  border-width: 3px;
+  border-color: .ffcdb2;
+  border-style: dashed;
+  background-color: .b5838d;
+  display: inline-block;
+  margin-left: 10px;
 }
 
-#three {
-    width: 200px;
-    border: 3px solid black;
-    background-color: #6d6875;
-    border-left-style: dotted;
-    border-radius: 10px;
-    display: inline-block;
-    margin-left: 10px;
+.three {
+  width: 200px;
+  border: 3px solid black;
+  background-color: 0.6d6875;
+  border-left-style: dotted;
+  border-radius: 10px;
+  display: inline-block;
+  margin-left: 10px;
 }
